--- a/package.json
+++ b/package.json
@@ -20,11 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.2.7",
-    "@nestjs/core": "^10.2.7",
-    "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.3.1",
+    "crypto-ts": "^1.0.2",
     "prisma": "^5.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
