本番環境作成完了

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:admin@localhost:5432/karioke?schema=public"
+DEPLOY_URL="postgresql://postgres:katsudon1114@db.tjgikehfglbulryibrtq.supabase.co:5432/postgres"
+DEV_URL="postgresql://postgres:postgres@localhost:54322/postgres"
