--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "crypto-ts": "^1.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "supabase": "^1.106.1"
+    "supabase": "^1.106.1",
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
