--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
             "use": "@vercel/node"
         }
     ],
-    "routes": "/(.*)",
+    "routes": "/(.*)/",
     "dest": "src/main.ts",
     "method": [
         "GET",
