--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "src/main.ts",
-            "use": "@vercel/node"
+        "src": "src/main.ts",
+        "use": "@vercel/node"
         }
     ],
-    "routes": "/(.*)/",
-    "dest": "src/main.ts",
-    "method": [
-        "GET",
-        "POST",
-        "PUT",
-        "DELETE"
+    "routes": [
+        {
+        "src": "/(.*)",
+        "dest": "src/main.ts"
+        }
     ]
 }
